install(
    FILES
        ExampleModelingVariants.geom.usd 
        exampleModelingVariants.katana 
        ExampleModelingVariants_payload.usd 
        ExampleModelingVariants.shading.usd 
        ExampleModelingVariants_slim.gen.usd 
        ExampleModelingVariants.usd 
    DESTINATION
        ${PXR_INSTALL_SUBDIR}/exampleModelingVariantsKatana
)
    
